--- a/index.css
+++ b/index.css
@@ -3,7 +3,7 @@ body {
     background-image: url("images/table.png");
     background-size: cover;
     font-weight: bold;
-    color: white;
+    color: black;
     text-align: center;
 }
 
